# ajam

./: .gitignore  Cargo.toml
.cursor/rules/: project.mdc
crates/ajam/: Cargo.toml
crates/ajam/src/: cli.rs  logging.rs  main.rs  shell.rs  state.rs
crates/ajam/src/state/: activity.rs  connect.rs  events.rs  mod.rs  navigation.rs  render.rs
crates/ajam_activity/: Cargo.toml  README.md
crates/ajam_activity/examples/: listener.rs
crates/ajam_activity/src/: lib.rs  monitor.rs
crates/ajam_activity/src/coreaudio/: listener.rs  mod.rs  property.rs  sys.rs
crates/ajam_activity/src/nsworkspace/: app_delegate.rs  mod.rs
crates/ajam_events/: Cargo.toml
crates/ajam_events/src/: activity_monitor.rs  lib.rs
crates/ajam_keypress/: Cargo.toml
crates/ajam_keypress/src/: key_combo.rs  lib.rs  performer.rs
crates/ajam_launchctl/: Cargo.toml
crates/ajam_launchctl/src/: agent.rs  control.rs  lib.rs
crates/ajam_profile/: Cargo.toml
crates/ajam_profile/src/: image.rs  lib.rs  manifest.rs  materialized_page.rs  profile.rs
examples/: activity_monitor.rs
profiles/com.todesktop.230313mzl4w4u92/: manifest.json  manifest.yaml
profiles/common/: manifest.json  manifest.yaml
profiles/ru.yandex.desktop.yandex-browser/: manifest.json
