[package]
name = "ajam_events"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
objc                       = "0.2.7"
cocoa                      = "0.24.1"
block                      = "0.1.6"
core-foundation            = "0.9.3"
coreaudio-sys              = "0.2"
# core-foundation-runloop    = "0.8"
core-graphics = "0.22.3"
tokio = { version = "1.39.0", features = ["full"] }